-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
It seems that qmt_pool_lookup() jumps to out_err label if qti_pools_add() fails, but the pool lock is not released:
out_err:
CERROR("%s: cannot add pool %s: err = %d\n",
qmt->qmt_svname, pos->qpi_name, rc);
RETURN(ERR_PTR(rc));
seems like a bug?
Introduced by 09f9fb3211c "LU-11023 quota: quota pools for OSTs"
- is related to
-
LU-11023 OST Pool Quotas
-
- Resolved
-